# llvm-toys

./: LICENSE  README.md  makellvm.sh
ASTtraverse/: ASTtraverse.cpp  CMakeLists.txt  FuncNames.txt  FuncNames_Macro.txt
ASTtraverse/test/: sum.c  test.sh
CheckNewDelete/: CMakeLists.txt  CheckNewDelete.cpp  CheckNewDeleteCallback.cpp  CheckNewDeleteCallback.h
CheckNewDelete/test/: newdelete.cpp  test.sh
HaltAnalyzer/: CMakeLists.txt  HaltAnalyzer.cpp  HaltAnalyzer.h
HaltAnalyzer/test/: test.c  test.ll  test.sh
IRdealer/: CMakeLists.txt  IRdealer.cpp  IRdealer.h
IRdealer/test/: test.c  test.ll  test.sh
JITtoy/: CMakeLists.txt  JITtoy.cpp
JITtoy/test/: test.sh
MacroGuard/: CMakeLists.txt  MacroGuardHelper.h  MacroGuardPragma.cpp  MacroGuardValidator.cpp  MacroGuardValidator.h  a.out
MacroGuard/test/: s2.c  s3.c  test.sh
RefactoringToy/: CMakeLists.txt  RefactoryToy.cpp  func_name.txt
RefactoringToy/test/: test.sh
SimpleIPO/: CMakeLists.txt  SimpleIPO.cpp  SimpleIPO.h
SimpleIPO/test/: test.sh
StrictOpt/: CMakeLists.txt  StrictOpt.cpp  StrictOpt.h
StrictOpt/test/: test.ll  test.sh  test_functionpass.sh
TernaryConverter/: CMakeLists.txt  TernaryConverter.cpp  TernaryConverterCallback.cpp  TernaryConverterCallback.h
TernaryConverter/test/: test.c  test.sh
include_specified_header/: simple_log_bak.h  test.cpp  test.sh
include_specified_header/clang/include/clang/Driver/: Options.td
include_specified_header/clang/lib/Driver/: Driver.cpp
include_specified_header/clang/lib/Driver/ToolChains/: Clang.cpp  Zipline.cpp  Zipline.h
reactor_checker/: test.c  test.plist  test.sh
reactor_checker/clang/include/clang/StaticAnalyzer/Checkers/: Checkers.td
reactor_checker/clang/lib/StaticAnalyzer/Checkers/: ReactorChecker.cpp
